# notification-service

./: README.md  pyproject.toml
src/: notification_service.py
tests/: test_notification_service.py
